Added header on Events page

--- a/events.html
+++ b/events.html
@@ -75,6 +75,9 @@
 
    <!--  <div class="container event-container "> --> <!-- container start -->
     <section class="event-container1">
+    			<div class="page-header">
+                   <span class="heading">Events</span>
+                </div> <!-- Page Header complete -->
 		<div class="row " style="position: relative;left: -69px;padding-bottom: 160px;top: 50px;"> <!-- row start -->
 			<div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]"> <!-- column start -->
 				<ul class="event-list">
