--- a/seminarVenues.html
+++ b/seminarVenues.html
@@ -44,18 +44,28 @@
        </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-           <ul class="nav navbar-nav">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="seminars.html">SEMINARS</a></li>
-            <li><a href="events.html">EVENTS</a></li>
-            <li><a href="testimonials.html">TESTIMONIALS</a></li>
-            <li><a href="contact.html">CONTACT US</a></li>
-          </ul>
-          
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav> <!--End Nav-->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+         <ul class="nav navbar-nav">
+          <li><a href="index.html">HOME</a></li>       
+<!-- menu -->
+      <li>
+            <a href="seminars.html" class="dropdown-toggle" data-toggle="dropdown">SEMINARS <b class="caret"></b></a>
+
+             <ul class="dropdown-menu nav navbar-nav" style="top: 65px;background-color: #222">
+              <li ><a href="seminarClips.html" style="text-decoration: none;">SEMINAR CLIPS</a></li>
+                <li><a href="seminarPackages.html">SEMINAR PACKAGES </a></li>
+                <li><a href="seminarVenues.html">SEINAR VENUES</a></li>        
+              </ul>
+                 </li>
+                 <li><a href="contact.html">CONTACT US</a></li>
+         <li><a href="events.html">EVENTS</a></li>
+             <li><a href="testimonials.html">TESTIMONIALS</a></li>
+        </ul>
+        
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav> <!--End Nav-->
 <!-- Rest of the web page  -->
 <!-- container class -->
 
