Pulled recent changes including Home page image

--- a/seminarClips.html
+++ b/seminarClips.html
@@ -101,7 +101,8 @@
             <p class="footer-text"> Copyright &#169; 2017 caribbeanconnection.us</p>
         </div>
     </footer>
-
+  <!-- script -->
+  
     <script src="assets/javascript/script.js"></script>
 </body>
 
