--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/secondstyle.css">
  	<!--Fonts-->
  	<link href="https://fonts.googleapis.com/css?family=Forum|Josefin+Sans|Nixie+One|Poiret+One|Proza+Libre|Questrial|Quicksand" rel="stylesheet">
+ 	<!-- Icons -->
+ 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  	<!--JQuery Library-->
  	<script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
  	<!--Bootstrap CSS-->
@@ -109,9 +111,23 @@
                     </div>
                    
           </div> <!--col-md-9 complete -->
+			<div class="menu-social-links-container">
+			<ul>
+			<li><a href="https://wwww.twitter.com/" class="fa fa-twitter"></a></li>
+                  
+               <!--  <a href="https://www.linkedin.com/feed/">
+                  <img src="assets/images/linkedin.png" class=" thumbnail logo2">
+                </a>
+                <a href="https://stackoverflow.com/users/8167485/ashwini">
+                 <img src="assets/images/stackoverflow.png" class=" thumbnail logo3">
+                </a> -->
+            </ul>    
+			</div> <!-- End social link menu -->
 
 </div> <!--1st Row complete -->
 </section>
+
+
   
   <!-- </div> container close  -->
 </div>
