changed image for About Us Page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                      <!-- Column for Row to contain image and paragraph -->
                            <div class="col-md-12">
                            <!-- Profile Image -->
-                              <img class="thumbnail img-responsive pull-right about-image" src="assets/images/default-thumbnail.jpg" >
+                              <img class="thumbnail img-responsive pull-right about-image" src="assets/images/pic2.jpg" >
                               <div>
                            <!-- My profile details -->
                               <p class="ptext">At SICORE100 we use powerful tools to apply strategic interventions to situations that you may be currently going through. 
