--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
 <head>
 
@@ -88,11 +88,50 @@
                    <span class="heading">About Us</span>
                 </div> <!-- Page Header complete -->
                 <!-- Row for image and paragraph -->
+  
                     <div class="row">
                      <!-- Column for Row to contain image and paragraph -->
                            <div class="col-md-12">
                            <!-- Profile Image -->
-                              <img class="thumbnail img-responsive pull-right about-image" src="assets/images/pic2.jpg" >
+                             <!--  <img class="thumbnail img-responsive pull-right about-image" src="assets/images/pic1.jpg" > -->
+
+								<!-- slide show start -->
+								  <div id="myCarousel" class="carousel slide thumbnail img-responsive pull-right about-image" data-ride="carousel" style="height: 359px!important; position: relative;left:107px;">
+							    <!-- Indicators -->
+							    <ol class="carousel-indicators">
+							      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+							      <li data-target="#myCarousel" data-slide-to="1"></li>
+							      <li data-target="#myCarousel" data-slide-to="2"></li>
+							    </ol>
+
+							    <!-- Wrapper for slides -->
+							    <div class="carousel-inner ">
+							      <div class="item active">
+							        <img src="assets/images/pic1.jpg" alt="Image1" style="width:326px; height: 349px">
+							      </div>
+
+							      <div class="item">
+							        <img src="assets/images/pic2.jpg" alt="Image2" style="width:326px; height: 349px">
+							      </div>
+							    
+							      <div class="item">
+							        <img src="assets/images/pic1.jpg" alt="Image3" style="width:326px; height: 349px">
+							      </div>
+							    </div>
+
+							    <!-- Left and right controls -->
+							    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+							      <span class="glyphicon glyphicon-chevron-left"></span>
+							      <span class="sr-only">Previous</span>
+														    </a>
+							    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+							      <span class="glyphicon glyphicon-chevron-right"></span>
+							      <span class="sr-only">Next</span>
+							    </a>
+							  </div>
+<!-- </div> -->
+								<!-- slide show end -->
+
                               <div>
                            <!-- My profile details -->
                               <p class="ptext">At SICORE100 we use powerful tools to apply strategic interventions to situations that you may be currently going through. 
@@ -117,10 +156,12 @@
           </div> <!--col-md-9 complete -->
 
 </div> <!--1st Row complete -->
+
 </section>
   
   <!-- </div> container close  -->
 </div>
+
 
 
 <!--Footer-->
@@ -131,6 +172,8 @@
 	</footer>
 
 	<script src="assets/javascript/script.js"></script>
+
+
 </body>
 
 </html>	
