Still making Changes to Seminar venues page

--- a/seminarVenues.html
+++ b/seminarVenues.html
@@ -50,7 +50,7 @@
                  <ul class="dropdown-menu nav navbar-nav" style="top: 65px;background-color: #222">
                   <li ><a href="seminarClips.html" style="text-decoration: none;">SEMINAR CLIPS</a></li>
                       <li><a href="seminarPackages.html">SEMINAR PACKAGES </a></li>
-                      <li><a href="seminarVenues.html">SEINAR VENUES</a></li>
+                      <li><a href="seminarVenues.html">SEMINAR VENUES</a></li>
                   </ul>
                      </li>
                      <li><a href="contact.html">CONTACT US</a></li>
@@ -88,52 +88,37 @@
                    <span class="heading">Seminar Venues</span>
                 </div> <!-- Page Header complete -->
                 <!-- Row for image and paragraph -->
-                <div class="row" class= "venueImgDiv">
-                  <div class="cols-md-6">
-                    <div class="row">
-                      <section>
-                        <img class="venueImg" src="assets/images/ES_prelobby_2_712x342_FitToBoxSmallDimension_Center.jpg"/>;
-                      </section>
-                    </div>
-                    <div class="row">
-                      <section>
-                      <img class="venueImg" src="assets/images/4286d623_z.jpg"/>;
-                      </section>
-                    </div>
-                    <div class="row">
-                      <section>
-                      <img class="venueImg" src="assets/images/17798201.jpg"/>;
-                      </section>
-                    </div>
-                    <div class="row">
-                      <section>
-                      <img class="venueImg" src="assets/images/ES_pool3_26_712x342_FitToBoxSmallDimension_Center.jpg"/>;
-                     </section>
-                    </div>
-                  </div>
-                  <div class="cols-md-6">
-                    <div class="row">
-                      <section>
-                        <img class="venueImg" src="assets/images/720-south-bar-and-grille.jpg"/>;
-                      </section>
-                    </div>
-                    <div class="row">
-                      <section>
-                        <img class="venueImg" src="assets/images/16342-62-l.jpg"/>;
-                      </section>
-                    </div>
-                    <div class="row">
-                      <section>
-                        <img class="venueImg" src="assets/images/HH_donblue_57_675x359_FitToBoxSmallDimension_Center.jpg"/>;
-                      </section>
-                    </div>
-                    <div class="row">
-                      <section>
-                        <img class="venueImg" src="assets/images/HH_dontables_59_675x359_FitToBoxSmallDimension_Center.jpg"/>;
-                      </section>
+                <div class="row venueImgDiv" >
+                  <div class="col-lg-12">
+                      <div class="col-lg-6">
+                        <img class="venueImg" src="assets/images/ES_prelobby_2_712x342_FitToBoxSmallDimension_Center.jpg"/>
+                      </div>
+                    <div class="col-lg-6">
+                      <img class="venueImg" src="assets/images/4286d623_z.jpg"/>
                     </div>
                   </div>
                 </div>
+                <div class="row venueImgDiv">
+                  <div class="col-lg-12">
+                    <div class="cols-lg-6">
+                      <img class="venueImg" src="assets/images/720-south-bar-and-grille.jpg"/>
+                    </div>
+                    <div class="col-lg-6">
+                      <img class="venueImg" src="assets/images/16342-62-l.jpg"/>
+                    </div>
+                  </div>
+                </div>
+                <div class="row venueImgDiv">
+                  <div class="col-lg-12">
+                    <div class="col-lg-6">
+                      <img class="venueImg" src="assets/images/HH_donblue_57_675x359_FitToBoxSmallDimension_Center.jpg"/>
+                    </div>
+                    <div class="col-lg-6">
+                       <img class="venueImg" src="assets/images/HH_dontables_59_675x359_FitToBoxSmallDimension_Center.jpg"/>
+                    </div>
+                  </div>
+                </div>  
+               
           </div> <!--col-md-12 complete -->
 
 </div> <!--1st Row complete -->
