--- a/testimonials.html
+++ b/testimonials.html
@@ -54,7 +54,7 @@
              <ul class="dropdown-menu nav navbar-nav" style="top: 65px;background-color: #222">
              	<li ><a href="seminarClips.html" style="text-decoration: none;">SEMINAR CLIPS</a></li>
                 <li><a href="seminarPackages.html">SEMINAR PACKAGES </a></li>
-               	<li><a href="seminarVenues.html">SEINAR VENUES</a></li>        
+               	<li><a href="seminarVenues.html">SEMINAR VENUES</a></li>        
               </ul>
                  </li>
                  <li><a href="contact.html">CONTACT US</a></li>
