Still making Changes to Seminar venues page

--- a/seminarVenues.html
+++ b/seminarVenues.html
@@ -90,18 +90,28 @@
                 <!-- Row for image and paragraph -->
                 <div class="row venueImgDiv" >
                   <div class="col-lg-12">
-                      <div class="col-lg-6">
-                        <img class="venueImg" src="assets/images/ES_prelobby_2_712x342_FitToBoxSmallDimension_Center.jpg"/>
-                      </div>
                     <div class="col-lg-6">
-                      <img class="venueImg" src="assets/images/4286d623_z.jpg"/>
+                      <img class="venueImg" src="assets/images/ES_prelobby_2_712x342_FitToBoxSmallDimension_Center.jpg"/>
+                    </div>
+                    <div class="col-lg-6">
+                      <img class="venueImg" src="assets/images/720-south-bar-and-grille.jpg"/>
                     </div>
                   </div>
                 </div>
                 <div class="row venueImgDiv">
                   <div class="col-lg-12">
-                    <div class="cols-lg-6">
-                      <img class="venueImg" src="assets/images/720-south-bar-and-grille.jpg"/>
+                    <div class="col-lg-6">
+                      <img class="venueImg" src="assets/images/17798201.jpg"/>
+                    </div>
+                    <div class="col-lg-6">
+                      <img class="venueImg" src="assets/images/ES_pool3_26_712x342_FitToBoxSmallDimension_Center.jpg"/>
+                    </div>
+                  </div>
+                </div>
+                <div class="row venueImgDiv">
+                  <div class="col-lg-12">
+                    <div class="col-lg-6">
+                      <img class="venueImg" src="assets/images/Hyatt-Ziva-Cancun-Aerial-002-AR.jpg"/>
                     </div>
                     <div class="col-lg-6">
                       <img class="venueImg" src="assets/images/16342-62-l.jpg"/>
