Still making Changes to Seminar venues page

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 					<p>Phone: 210-279-9424</p>
 					<p>Want to do business with us then just leave a comment here and your contact details.</p>
 					<div id="contact">
-						<form action="https://carribeanconnections.us/contact" method="post" class="contact-form commentsblock">
+						<form action="mailto:ashwini0185@gmail.com method="post" class="contact-form commentsblock">
 						<div>
 						<label for="g3-name" class="grunion-field-label name">Name<span>(required)</span></label>
 						<input type="text" name="name" id="name" value="John Doe" class="name" required="" aria-required="true">
@@ -119,7 +119,7 @@
 						<textarea name="comment" id="comment" rows="20" class="textarea" required="" aria-required="true" value="Your Message"></textarea>
 						</div>
 						<p class="contact-submit">
-						<input type="submit" value="Submit »" class="pushbutton-wide">
+						<input type="submit" value="Submit »" class="pushbutton-wide" mailto>
 						</p>
 						</form>
 				</div>
