--- a/seminarVenues.html
+++ b/seminarVenues.html
@@ -91,10 +91,10 @@
                 <div class="row venueImgDiv" >
                   <div class="col-lg-12">
                     <div class="col-lg-6">
-                      <img class="venueImg" src="assets/images/ES_prelobby_2_712x342_FitToBoxSmallDimension_Center.jpg"/>
+                      <img class="venueImg" src="assets/images/Santa-Fe-2.png"/>
                     </div>
                     <div class="col-lg-6">
-                      <img class="venueImg" src="assets/images/720-south-bar-and-grille.jpg"/>
+                      <img class="venueImg" src="assets/images/Hyatt-Ziva-Cancun-Aerial-002-AR.jpg"/>
                     </div>
                   </div>
                 </div>
@@ -111,7 +111,7 @@
                 <div class="row venueImgDiv">
                   <div class="col-lg-12">
                     <div class="col-lg-6">
-                      <img class="venueImg" src="assets/images/Hyatt-Ziva-Cancun-Aerial-002-AR.jpg"/>
+                      <img class="venueImg" src="assets/images/ES_prelobby_2_712x342_FitToBoxSmallDimension_Center.jpg"/>
                     </div>
                     <div class="col-lg-6">
                       <img class="venueImg" src="assets/images/16342-62-l.jpg"/>
