Added Seminar venues images given by Hector

--- a/seminarVenues.html
+++ b/seminarVenues.html
@@ -102,42 +102,86 @@
                   <!-- Wrapper for slides -->
                   <div class="carousel-inner ">
                     <div class="item active">
-                      <img src="assets/images/venue21.jpg" alt="Image1">
+                      <img src="assets/images/venue21.jpg" alt="Image1" class="venueImg">
                     </div>
 
                     <div class="item">
-                      <img src="assets/images/venue15.jpg" alt="Image2" >
+                      <img src="assets/images/venue15.jpg" alt="Image2" class="venueImg">
                     </div>
                   
                     <div class="item">
-                      <img src="assets/images/venue3.jpg" alt="Image3">
+                      <img src="assets/images/venue3.jpg" alt="Image3" class="venueImg">
                     </div>
 
                      <div class="item">
-                      <img src="assets/images/venue4.jpg" alt="Image3">
+                      <img src="assets/images/venue4.jpg" alt="Image3" class="venueImg">
                     </div>
 
                      <div class="item">
-                      <img src="assets/images/venue17.jpg" alt="Image3">
+                      <img src="assets/images/venue17.jpg" alt="Image3" class="venueImg">
                     </div>
 
                      <div class="item">
-                      <img src="assets/images/venue19.jpg" alt="Image3">
+                      <img src="assets/images/venue19.jpg" alt="Image3" class="venueImg">
                     </div>
 
                      <div class="item">
-                      <img src="assets/images/venue20.jpg" alt="Image3" >
+                      <img src="assets/images/venue20.jpg" alt="Image3" class="venueImg" >
                      </div>
                     <div class="item">
-                      <img src="assets/images/venue7.jpg" alt="Image3">
+                      <img src="assets/images/venue7.jpg" alt="Image3" class="venueImg" >
                     </div>
                     <div class="item">
-                      <img src="assets/images/venue8.jpg" alt="Image3">
+                      <img src="assets/images/venue8.jpg" alt="Image3" class="venueImg">
                     </div>
                     <div class="item">
-                      <img src="assets/images/venue9.jpg" alt="Image3" >
+                      <img src="assets/images/venue9.jpg" alt="Image3" class="venueImg">
                     </div>
-
+                    <div class="item">
+                      <img src="assets/images/venue1.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue2.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue5.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue6.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue10.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue11.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue12.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue13.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue14.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue16.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue18.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue23.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue24.jpg" alt="Image3" class="venueImg">
+                    </div>
+                    <div class="item">
+                      <img src="assets/images/venue25.jpg" alt="Image3" class="venueImg">
+                    </div>
+                     <div class="item">
+                      <img src="assets/images/venue26.jpg" alt="Image3" class="venueImg">
+                    </div>
                   </div>
 
                   <!-- Left and right controls -->
