Added Seminar venues images given by Hector

--- a/seminarVenues.html
+++ b/seminarVenues.html
@@ -182,6 +182,12 @@
                      <div class="item">
                       <img src="assets/images/venue26.jpg" alt="Image3" class="venueImg">
                     </div>
+                     <div class="item">
+                      <img src="assets/images/venue27.jpg" alt="Image3" class="venueImg">
+                    </div>
+                     <div class="item">
+                      <img src="assets/images/venue28.jpg" alt="Image3" class="venueImg">
+                    </div>
                   </div>
 
                   <!-- Left and right controls -->
