Added content to Seminar Package page and Venue page.

--- a/seminarPackages.html
+++ b/seminarPackages.html
@@ -90,6 +90,36 @@
                 <div class="page-header">
                    <span class="heading">Seminar Packages</span>
                 </div> <!-- Page Header complete -->
+                 <div><p class="venueText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi eaque repellendus aperiam sed, quam temporibus architecto quaerat fuga quae, debitis saepe asperiores explicabo dolorem inventore expedita cumque, harum nulla! </p>
+                <p class="venueText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit facere omnis odio nam in, non ducimus expedita maxime quae dignissimos sit facilis, similique voluptatibus pariatur sint recusandae iusto veritatis sequi.
+                </p></div>
+                <br>
+                <br>
+                <div class="venueText">
+                <ul>
+                  <li>one-on-one coaching</li>
+                  <li>Group coaching</li>
+                  <li>Corporate Seminars</li>  
+                  <li>Weekly packages</li>
+                  <ul>
+                    <li>8 week package</li>
+                    <li>10 week package</li>
+                    <li>12 week package</li>
+                  </ul>
+                </ul>
+                <ul>
+                  <li>Life Changing Courses</li>
+                  <ul>
+                    <li>The warrior mindset</li>
+                    <li>The productivity masterclass</li>
+                    <li>You did’t say it but I got it</li>
+                    <li>Goal Getting</li>
+                    <li>The Anxiety, stress and self-esteem “breakthrough” program</li>
+                  </ul>
+                </ul>
+
+                
+                </div>
                 <!-- Row for image and paragraph -->
                     <div class="row">
                      
