--- a/seminarClips.html
+++ b/seminarClips.html
@@ -90,6 +90,9 @@
                 <div class="page-header">
                    <span class="heading">Seminar Clips</span>
                 </div> <!-- Page Header complete -->
+                <div><p class="venueText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi eaque repellendus aperiam sed, quam temporibus architecto quaerat fuga quae, debitis saepe asperiores explicabo dolorem inventore expedita cumque, harum nulla! </p>
+                <p class="venueText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit facere omnis odio nam in, non ducimus expedita maxime quae dignissimos sit facilis, similique voluptatibus pariatur sint recusandae iusto veritatis sequi.
+                </p></div>
                 <!-- Row for image and paragraph -->
                     <div class="row">
                      
