--- a/testimonials.html
+++ b/testimonials.html
@@ -107,9 +107,11 @@
 						<div class="info">
 							<h2 class="title"> John Doe </h2>
 							<br><br>
-							<div><p class="venueText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi eaque repellendus aperiam sed, quam temporibus architecto quaerat fuga quae, debitis saepe asperiores explicabo dolorem inventore expedita cumque, harum nulla! </p>
-                  			<p class="venueText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit facere omnis odio nam in, non ducimus expedita maxime quae dignissimos sit facilis, similique voluptatibus pariatur sint recusandae iusto veritatis sequi.
-                			</p></div>
+							<div class="desc">
+								<p class="venueText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi eaque repellendus aperiam sed, quam temporibus architecto quaerat fuga quae, debitis saepe asperiores explicabo dolorem inventore expedita cumque, harum nulla! </p>
+                  				<p class="venueText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit facere omnis odio nam in, non ducimus expedita maxime quae dignissimos sit facilis, similique voluptatibus pariatur sint recusandae iusto veritatis sequi.
+                				</p>
+                			</div>
 							<!-- <p class="desc">United States Holiday</p> -->
 						</div>
 						
@@ -120,9 +122,11 @@
 						<div class="info">
 							<h2 class="title">Jane Doe</h2>
 							<br><br>
-							<div><p class="venueText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi eaque repellendus aperiam sed, quam temporibus architecto quaerat fuga quae, debitis saepe asperiores explicabo dolorem inventore expedita cumque, harum nulla! </p>
-                  			<p class="venueText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit facere omnis odio nam in, non ducimus expedita maxime quae dignissimos sit facilis, similique voluptatibus pariatur sint recusandae iusto veritatis sequi.
-                			</p></div>
+							<div class="desc">
+								<p class="venueText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi eaque repellendus aperiam sed, quam temporibus architecto quaerat fuga quae, debitis saepe asperiores explicabo dolorem inventore expedita cumque, harum nulla! </p>
+                  				<p class="venueText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit facere omnis odio nam in, non ducimus expedita maxime quae dignissimos sit facilis, similique voluptatibus pariatur sint recusandae iusto veritatis sequi.
+                				</p>
+                			</div>
 							<!-- <p class="desc">PS Vita</p> -->
 							
 						</div>
