Arranged Navbar links properly on all the pages.

--- a/seminarPackages.html
+++ b/seminarPackages.html
@@ -57,9 +57,9 @@
                 <li><a href="seminarVenues.html">SEMINAR VENUES</a></li>        
               </ul>
                  </li>
+                 <li><a href="events.html">EVENTS</a></li>
+                 <li><a href="testimonials.html">TESTIMONIALS</a></li>
                  <li><a href="contact.html">CONTACT US</a></li>
-         <li><a href="events.html">EVENTS</a></li>
-             <li><a href="testimonials.html">TESTIMONIALS</a></li>
         </ul>
         
       </div><!-- /.navbar-collapse -->
@@ -90,9 +90,11 @@
                 <div class="page-header">
                    <span class="heading">Seminar Packages</span>
                 </div> <!-- Page Header complete -->
-                 <div><p class="venueText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi eaque repellendus aperiam sed, quam temporibus architecto quaerat fuga quae, debitis saepe asperiores explicabo dolorem inventore expedita cumque, harum nulla! </p>
-                <p class="venueText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit facere omnis odio nam in, non ducimus expedita maxime quae dignissimos sit facilis, similique voluptatibus pariatur sint recusandae iusto veritatis sequi.
-                </p></div>
+                 <div>
+                  <p class="venueText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum eligendi eaque repellendus aperiam sed, quam temporibus architecto quaerat fuga quae, debitis saepe asperiores explicabo dolorem inventore expedita cumque, harum nulla! </p>
+                  <p class="venueText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit facere omnis odio nam in, non ducimus expedita maxime quae dignissimos sit facilis, similique voluptatibus pariatur sint recusandae iusto veritatis sequi.
+                  </p>
+                </div>
                 <br>
                 <br>
                 <div class="venueText">
