--- a/seminarPackages.html
+++ b/seminarPackages.html
@@ -69,8 +69,8 @@
 <!-- container class -->
 
 <!--Webpage Body-->
-    <div class="body-webpage">
-    <section style="position: relative;bottom: -91px;">
+ <div class="body-webpage">
+    <section style="position: relative;bottom: 62px;">
         <div class="jumbotron filler-jumbotron7">
                 <div class="container">
                     <!-- <p class="empty-containter"> -->
@@ -80,30 +80,46 @@
             </div>
     </section>
 
-
-  <!-- <div class="container para-image-container"> -->
-
-  <section class="para-image-container" >
-<!-- 1st Row -->
-      <div class="row">
-          <div class="col-md-12 para-image-col">
-                <div class="page-header">
-                   <span class="heading">Seminar Packages</span>
-                </div> <!-- Page Header complete -->
-                <!-- Row for image and paragraph -->
-                    <div class="row">
-                     
-                    </div>
-                   
-          </div> <!--col-md-9 complete -->
-
-</div> <!--1st Row complete -->
-</section>
-  
-  <!-- </div> container close  -->
+   <section class="package-container1">
+    <!-- <div class="containerPackage" > -->
+    <div class="columns1">
+      <ul class="price">
+       <li class="header">Seminars</li>
+    <!-- <li class="grey">$ 9.99 / year</li> -->
+       <li>one-on-one coaching</li>
+        <li>Group coaching</li>
+       <li>Corporate Seminars</li>
+    <!-- <li>1GB Bandwidth</li> -->
+    <!-- <li class="grey"><a href="#" class="button">Sign Up</a></li> -->
+  </ul>
 </div>
 
+<div class="columns1">
+  <ul class="price">
+    <li class="header" style="background-color:#4CAF50">Weekly Packages</li>
+    <!-- <li class="grey">$ 24.99 / year</li> -->
+    <li>8 week package</li>
+    <li>10 week package</li>
+    <li>12 week package</li>
+    <!-- <li>2GB Bandwidth</li> -->
+    <!-- <li class="grey"><a href="#" class="button">Sign Up</a></li> -->
+  </ul>
+</div>
 
+<div class="columns1">
+  <ul class="price">
+    <li class="header">Life Changing Courses</li>
+    <!-- <li class="grey">$ 49.99 / year</li> -->
+    <li>The warrior mindset</li>
+    <li>The productivity masterclass</li>
+    <li>You did’t say it but I got it</li>
+    <li>Goal Getting</li>
+    <li>The Anxiety, stress and self-esteem “breakthrough” program</li>
+    <!-- <li class="grey"><a href="#" class="button">Sign Up</a></li> -->
+  </ul>
+</div>
+<!-- </div> -->
+</section> 
 <!--Footer-->
     <footer>
         <div>
