Changes to the content of home page

--- a/index.html
+++ b/index.html
@@ -135,19 +135,24 @@
 
                               <div>
                            <!-- My profile details -->
-                              <p class="ptext">At SICORE100 we use powerful tools to apply strategic interventions to situations that you may be currently going through. 
-							  Through the professional application of strategic intervention we identify and help you understand patterns of emotional and relationship dynamics that cause anxiety, insecurity, conflict, lack of direction and a feeling of failure. Through a strategic interventionist you will undo these patterns and dynamics, so you can enjoy the quality of life, love, relationships, communications you want and deserve.
+                              <p class="ptext">At Caribbean Connection we provide you with the strongest possible platform to encourage your companies growth.  Whether it’s a conference, a seminar, a holiday party or unique and custom experience, our team has the expertise to bring your vision to life.  We work with you from the initial concept, planning and design, through to onsite management and production.  We understand the investment of corporate events; we are thoughtful and considerate of each event and it’s goals. We can make your event and training seminar an unforgettable experience and your people effectively learn what you set them out to learn. 
 							 </p>
 							 <br>
+							 <h4 class="serviceh4">SERVICES</h4>
 							 <p class="ptext">
-							 What distinguishes a Strategic Intervention coach from others is the belief that certain holistic solutions “snap into place” when more people’s needs are met, expressed, and elevated. Why? Because our solutions are based on the principle of growth and contribution. Any change, when it is reinforced by growth and contribution, not only “sticks,” but it goes on to positively influence hundreds of other people.
+							 At Caribbean Connection, we are in a unique position to provide all of our services through our in house team; this ensures the highest quality of production and results in flawless events.<br>The service include, accommodation set-up, event venue contracting, seminar and speaker planning, hiring or execution. We also have predetermined seminars for the growth of your personnel in a completely set up for you learning environment. In our events you will learn the culture of the countries where we operate. 
 							</p>
 							<br>
+							<h4 class="eventh4">INTERNATIONAL EVENT PRODUCTION</h4>
 							<p class="ptext">
-							As a trained Strategic Intervention coach we navigate these different arenas with ease. 
-							​As a coach and consultant we are knowledgeable in Strategic Intervention, and get our clients to take action on our advice and directives, sidestepping interpersonal restrictions, and enjoying breakthrough performance.
-							If businesspeople were to implement Strategic Interventions, they would resolve individual and organizational and cultural paradoxes that otherwise lead to internal conflict and blocked initiative. If legislators and judges understood human and family dynamics outlined by a Strategic Intervention, they would find ways to pass judgments without disrupting essential structures of the family, and more children would be supported in their upbringing without medication or being institutionalized.   
-							By using the most essential, practical, and effective principles and strategies as Strategic Interventionists – whether these relate to matters of the individual, couple, family, partnership, company, organizations, or culture – our mission at SICORE100 is to make these principles have an active impact on a cultural level.​
+							Caribbean Connection was founded by industry and country experts who specialize in creating innovative, sophisticated and cutting edge events for you and your company in the Caribbean and Mexico. With many years of experience and deep knowledge of the countries where our events are held. We have developed a rich knowledge and understanding of the event, seminar, and hospitality worlds: resulting in our reputation for creating truly unforgettable moments. Our unique emphasis in the local culture and history of the Dominican Republic and Mexico will ensure that your company will learn effectively and come back with the changed mindset.<br>
+							As a company we are storytellers, and coaches believing that the experience of the event can have a major impact on guests, it is our mission to ensure each and every event is thoughtfully produced and curated to create a moment that forges life long impressions.
+							</p>
+							<br>
+							<h4 class="strategyh4">STRATEGY ■ IDEATION ■ DESIGN ■ DEVELOPMENT ■ ACTIVATION</h4>
+							<hr>
+							<p class="ptext">
+							We strategize, conceptualize, curate, design and develop all concepts to produce extraordinary results. Our expertise include; international events, conferences, product launches, brand activations, company retreats, major public events, concerts, social gatherings, private dinners, galas and fundraisers, weddings, proposals, art exhibitions and unique and custom experiences.<br>We are committed to providing our clients with the strongest foundation for their success, our insight into our clients’ needs and requirements, together with our commitment to the best hospitality guarantees that we always bring visions to life in a way that surpasses all expectations.		
 							</p>
                             </div>  
 
